# labeling-t

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  REVIEW.md  doc.md  docker-compose.yml  plan.md  pyproject.toml
.claude/skills/labeling-t/: SKILL.md
.claude/skills/labeling-t/references/: guardrails.md  lifecycle.md  ocr-enrichment.md
deploy/: .env.example  Caddyfile  README.md  cloud-init.yaml  docker-compose.yml
nginx/: images.conf
plans/: agent-interface-brief.md  agent-interface-plan.md  keypoints-plan.md  roadmap.md
runbooks/ipbl-1k-locateanything/: README.md  category_map.json
scripts/: crop_boxes.py  crop_relative.py  curate_frames.py  export_prefiltered_verified.py  ls_project_local_frames.py  ls_setup.py  make_court_kp_dataset.py  make_scoreboard_kp_dataset.py  owlv2_debug.py  owlv2_smoke.py  serve_vllm.sh  set_bucket_cors.py  spike.py
src/labeling_t/: __init__.py  cli.py  config.py  frames.py  geometry.py  gpu.py  ingest.py  keypoints.py  labelset.py  layout.py  manifest.py  model_client.py  models.py  output.py  podstate.py  prelabel.py  render.py  runpod.py  sample.py  schema.py  segment.py  storage.py  transcribe.py  verify.py
src/labeling_t/adapters/: __init__.py  coco.py  label_studio.py
src/labeling_t/server/: __init__.py  app.py  contract.py
src/labeling_t/server/adapters/: __init__.py  base.py  locateanything.py  owlv2.py  sam2.py  vitpose.py
src/labeling_t/web/: __init__.py  app.py  datasets.py  jobs.py  lsstate.py
src/labeling_t/web/static/: app.js  index.html  style.css
tests/: conftest.py  test_cli_e2e.py  test_coco.py  test_frames.py  test_geometry.py  test_gpu.py  test_ingest.py  test_keypoints.py  test_label_studio.py  test_labelset.py  test_layout.py  test_manifest.py  test_model_client.py  test_prelabel.py  test_progress.py  test_render.py  test_runpod.py  test_sample.py  test_schema.py  test_segment.py  test_server_adapters.py  test_state.py  test_storage.py  test_transcribe.py  test_transformers_seam.py  test_verify.py  test_web.py
