[project]
name = "labeling-t"
version = "0.1.0"
description = "Batch auto-labeling backend: model pre-labels -> Label Studio verification -> export. Owned neutral schema; integrations are adapters."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",         # model transport: POST to a remote vLLM OpenAI-compatible endpoint
    "pillow>=10.0",        # image dimensions + base64 encoding (header read, no GPU)
    "python-dotenv>=1.0",  # load endpoint/key/model from .env
]

# The model runs on a REMOTE GPU (vLLM); this machine only talks HTTP. No
# torch/transformers here. Heavier export deps stay behind an extra.
[project.optional-dependencies]
integrations = [
    "supervision>=0.22",      # export boundary: Detections -> COCO/YOLO, ByteTrack later
    "label-studio-sdk>=1.0",  # LS import / pull-back
]
cloud = [
    "boto3>=1.34",            # S3 / DigitalOcean Spaces storage backend
]
web = [
    "fastapi>=0.110",         # JSON API over the pipeline stages
    "uvicorn[standard]>=0.27",# ASGI server for `labeling-t-web`
    "python-multipart>=0.0.9",# multipart form parsing for image uploads
]
# The transformers model-server (`labeling-t-models`). FAT: runs ON the GPU pod,
# built into the Docker image (uv sync --extra models). NEVER installed on the
# thin client — base `import labeling_t` stays torch-free (server code is lazy).
models = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "torch>=2.2",             # transformers backbone (CUDA build via the Docker base image)
    "transformers>=4.45",     # OWLv2 / GroundingDINO / LocateAnything-3B
    "scipy>=1.10",            # OWLv2's Owlv2ImageProcessorPil needs it for resize (else /infer 500s)
    "pillow>=10.0",
    "pycocotools>=2.0",       # COCO RLE encode/decode for SAM2 masks (PR-3+)
    # NOTE: sam2 added at PR-4; pin then (may force its own image — dep solve).
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
labeling-t = "labeling_t.cli:main"
labeling-t-runpod = "labeling_t.runpod:main"
labeling-t-web = "labeling_t.web.app:main"
labeling-t-models = "labeling_t.server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/labeling_t"]

[tool.pytest.ini_options]
testpaths = ["tests"]
